# rgb-aluvm

./: Cargo.toml  _typos.toml
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
src/: lib.rs
src/isa/: bytecode.rs  exec.rs  flags.rs  instr.rs  macros.rs  mod.rs  opcodes.rs  outr.rs
src/reg/: core_regs.rs
tests/: aluasm_rgb.rs
