[package]
name = "rgb-aluvm"
description = "Functional registry-based RISC virtual machine"
version = "0.11.1-rc.2"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
repository = "https://github.com/rgb-protocol/rgb-aluvm"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
rust-version = "1.85.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
exclude = [".github"]

[lib]
name = "aluvm"

[[bin]]
name = "aluvm-stl"
required-features = ["stl"]

[dependencies]
amplify = { version = "=4.8.1", default-features = false, features = [
    "apfloat",
    "derive",
    "hex",
] }
rgb-ascii-armor = { version = "1.0.1", optional = true }
baid64 = "=0.4.1"
paste = "1"
rgb-strict-encoding = { version = "~1.0.1", default-features = false, features = [
    "float",
    "derive",
] }
rgb-strict-types = { version = "~1.0.1", optional = true }
sha2 = "0.10.8"
blake3 = "1.5.4"
ripemd = "0.1.3"
secp256k1 = { version = "0.29.1", optional = true, features = [
    "global-context",
] }
curve25519-dalek = { version = "4.1.3", optional = true }
half = "2.4.1" # Required to maintain MSRV
serde_crate = { package = "serde", version = "1", optional = true }

[features]
default = [
    "std",
]
all = [
    "stl",
    "std",
    "log",
    "secp256k1",
    "curve25519",
    "serde",
    "ascii-armor",
]
ascii-armor = [
    "rgb-ascii-armor",
]
stl = [
    "rgb-strict-types/armor",
    "std"
]
std = [
    "amplify/std",
]
log = [
    "std",
]
alloc = [
    "amplify/alloc",
]
curve25519 = [
    "curve25519-dalek",
]
serde = [
    "serde_crate",
    "amplify/serde",
    "std",
    "rgb-strict-encoding/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = [
    "wasm_js",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
